--- a/.github/workflows/update-plex.yaml
+++ b/.github/workflows/update-plex.yaml
@@ -15,6 +15,8 @@ jobs:
     
     steps:
       - uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
@@ -29,8 +31,10 @@ jobs:
         
       - name: Commit and Push Changes
         run: |
-          git config --global user.name 'GitHub Action'
-          git config --global user.email 'action@github.com'
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add docs/data/recent.json
           git commit -m "Update Plex data" || echo "No changes to commit"
           git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
