--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,10 @@
 {
-
     "require": {
-        "guzzlehttp/guzzle": "^7.0",
-        "vlucas/phpdotenv": "^5.6"
+        "guzzlehttp/guzzle": "^7.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "PlexStatus\\": "src/PlexStatus/"
+        }
     }
 }
